--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,6 +187,15 @@
     margin-bottom: 4%;
 }
 
+.pword{
+    position: relative;
+}
+
+.pword-show{
+    position: absolute;
+    top: 60%;
+    right: 3%;
+}
 
 /* media queries */
 @media screen and (min-width: 1024px) and (max-width: 1300px) {
